# Genetic_Cryptarithmetic

./: .gitignore  README.md  pyproject.toml  resultados_ag.xlsx
cripto_aritmetica/: app.py  brute_force.py  ciclic_crossover.py  cripto_aritmetica.py  highfit.py  lowfit.py  test.py  test2.py  test3.py
