[tool.poetry]
name = "cripto-aritmetica"
version = "0.1.0"
description = ""
authors = ["Everson Esteves <119083241+esteveseverson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prompt-toolkit = "^3.0.48"
pygments = "^2.18.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'python .\cripto_aritmetica\cripto_aritmetica.py'
format = 'ruff check . --fix && ruff format .'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
